[B][COLOR=FFFF8C00]BUILD 10.2.5 - RELEASE DATE 09/15/2017[/COLOR][/B]
New:  Retroplayer support (Games OSD / Games settings)
Improved:  Use mixed case font in media lists
Improved:  Reduce scrollspeed for readability
Improved:  Tweak positioning of various labels
Improved:  Update music and song information for Leia

[B][COLOR=FFFF8C00]BUILD 10.2.3 - RELEASE DATE 01/09/2017[/COLOR][/B]
New:  Initial release for Leia

[B][COLOR=FFFF8C00]BUILD 9.2.0 - RELEASE DATE 08/30/2016[/COLOR][/B]
New:  Skin files are now stored in addon folder skin.aeonmq5 (due to Kodi change) 
Fixed:  Top Menu and Main menu for Video Add-ons now works
Fixed:  Obsolete System.GetBool(PVRManager.enabled) removed (use PVR.HasTVChannels)
New:  InfoLabel Addonsummary is now Label2
New:  Media settings
New:  DialogPlayerProgressInfo (key O in video/live tv)
New:  Support for videospeedup (Player.IsTempo)  new buttons on fullscreen OSD for CMS
New:  Show Kodi privacy notice
Mew:  Play album from music infof (requirtes script playalbum)
Improved:  display of usseratings (now using half-stars)
New:  Display music roles in music visualisation via <I> key
Improved:  Music top menu can now reset the path for music logo images

[B][COLOR=FFFF8C00]BUILD 9.1.18 - RELEASE DATE 06/30/2016[/COLOR][/B]
Fixed:  Lower textbox in right list view
Fixed:  Musicinformation dialog
Fixed:  Doubled plot in musicinformation for music videos
New:  Default slider orientation is horizontal (new Krypton setting)
New:  AudioDSP labels

[B][COLOR=FFFF8C00]BUILD 9.1.17 - RELEASE DATE 05/09/2016[/COLOR][/B]
New:  Support for Music roles
Improved:  Updated xbmc.gui to 5.12.0 (Krypton A2 builds)
Improved:  Updated Settings window for new Krypton settings layout
Fixed:  Recorded TV program start times now show

[B][COLOR=FFFF8C00]BUILD 9.1.16 - RELEASE DATE 03/15/2016[/COLOR][/B]
New:  Support for music and video genre icons / fanart from resource add-ons
New:  Support for studio and record label icons from resource add-ons