@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.aeonmq5.leiamod" version="10.2.5" name="Aeon MQ 5 Leiamod" provider-name="MarcosQui">
+<addon id="skin.aeonmq5.leiamod" version="10.2.6" name="Aeon MQ 5 Leiamod" provider-name="MarcosQui">
 	<requires>
 		<import addon="xbmc.gui" version="5.13.0"/>
 		<import addon="script.favourites" version="4.0.4"/>
@@ -66,9 +66,13 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR=FFFF8C00]BUILD 10.2.3 - RELEASE DATE 05/01/2017 for Kodi LEIA ALPHA1+[/COLOR][/B]
+		<news>[B][COLOR=FFFF8C00]BUILD 10.2.5 - RELEASE DATE 09/15/2017 for Kodi LEIA ALPHA1+[/COLOR][/B]
 This is a MOD of Aeon MQ5 by user Scott967
-New:  First release for Kodi Leia
+New:  Skin is now 1920x1080 resolution
+New:  Support for retroplayer (Games OSD / Games settings)
+Improved:  Music and song info dialog
+Improved:  Mixed case is used in media lists
+Improved:  Better layouts when "massive font" is selected
 		</news>
 	</extension>
 
